--- a/.github/workflows/release-to-production.yml
+++ b/.github/workflows/release-to-production.yml
@@ -20,7 +20,7 @@ jobs:
 
     - uses: frasermolyneux/actions/dotnet-func-ci@main
       with:
-        dotnet-project: "portal-sync"
+        dotnet-project: "sync-func"
         dotnet-version: 7.0.x
         src-folder: "src"
 
@@ -64,7 +64,7 @@ jobs:
 
       - uses: frasermolyneux/actions/deploy-function-app@main
         with:
-          function-app-artifact-name: "portal-sync"
+          function-app-artifact-name: "sync-func"
           function-app-name: ${{ needs.terraform-plan-and-apply-dev.outputs.function_app_name }}
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
@@ -111,7 +111,7 @@ jobs:
 
       - uses: frasermolyneux/actions/deploy-function-app@main
         with:
-          function-app-artifact-name: "portal-sync"
+          function-app-artifact-name: "sync-func"
           function-app-name: ${{ needs.terraform-plan-and-apply-prd.outputs.function_app_name }}
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
