--- a/src/sync-func/sync-func.csproj
+++ b/src/sync-func/sync-func.csproj
@@ -12,7 +12,9 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
     <PackageReference Include="FluentFTP" Version="45.0.4" />
     <PackageReference Include="FluentFTP.Logging" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 	<PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.10.0" />
+	<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
 	<PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0" OutputItemType="Analyzer" />
 	<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.1.0" />
 	<PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
