Adding devcontainer and updates

--- a/.github/workflows/release-to-production.yml
+++ b/.github/workflows/release-to-production.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - main
+  schedule:
+    - cron: "0 3 * * 4" # Every Thursday at 3am
 
 permissions:
   id-token: write # This is required for requesting the JWT
