Update workflow permissions

--- a/.github/workflows/release-to-production.yml
+++ b/.github/workflows/release-to-production.yml
@@ -9,6 +9,7 @@ on:
     - cron: "0 3 * * 4" # Every Thursday at 3am
 
 permissions:
+  id-token: write # This is required for Az CLI Login
   contents: read # This is required for actions/checkout
 
 concurrency: # This is required to prevent multiple runs of the same workflow from running at the same time.
