--- a/.github/workflows/feature-development.yml
+++ b/.github/workflows/feature-development.yml
@@ -7,6 +7,7 @@ on:
       - "feature/*"
 
 permissions:
+  id-token: write # This is required for Az CLI Login
   contents: read # This is required for actions/checkout
 
 jobs:
