--- a/.github/workflows/feature-development.yml
+++ b/.github/workflows/feature-development.yml
@@ -27,6 +27,9 @@ jobs:
     environment: Development
     runs-on: ubuntu-latest
 
+    concurrency:
+      group: ${{ github.repository }}-dev
+
     steps:
     - uses: actions/checkout@v3
 
@@ -57,6 +60,9 @@ jobs:
     environment: Development
     runs-on: ubuntu-latest
     needs: [dotnet-func-ci, terraform-plan-and-apply-dev]
+
+    concurrency:
+      group: ${{ github.repository }}-dev
 
     steps:
     - uses: actions/checkout@v3
