--- a/src/sync-func/sync-func.csproj
+++ b/src/sync-func/sync-func.csproj
@@ -22,6 +22,7 @@
 	<PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.2.0" />
 	<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
 	<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.6" />
 	<PackageReference Include="XtremeIdiots.Portal.RepositoryApiClient" Version="1.1.184.1" />
   </ItemGroup>
   <ItemGroup>
