--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -35,6 +35,24 @@
       }
     },
     {
+      "label": "test",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "test",
+        "${workspaceFolder}/src",
+        "--filter",
+        "FullyQualifiedName!~IntegrationTests",
+        "/property:GenerateFullPaths=true",
+        "/consoleloggerparameters:NoSummary"
+      ],
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      },
+      "problemMatcher": "$msCompile"
+    },
+    {
       "label": "clean release (functions)",
       "command": "dotnet",
       "args": [
