--- a/.gitignore
+++ b/.gitignore
@@ -349,5 +349,11 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+# Azurite emulator files
+__azurite*
+__blobstorage__/
+__queuestorage__/
+__tablestorage__/
+
 terraform/.terraform.lock.hcl
 terraform/.terraform/*
