feat: Implement Map Redirect Sync functionality
- Added MapRedirectSync class to handle synchronization of map redirects.
- Introduced MapRedirectEntry model to represent map redirect entries.
- Created IMapRedirectRepository interface and its implementation for fetching map entries.
- Developed MapRedirectRepositoryOptions for configuration settings.
- Integrated dependency injection for map redirect services in Program.cs.
- Implemented health checks and application insights telemetry.
- Added UserProfileForumsSync for syncing user profiles with forums.
- Created BanFilesRepository for managing ban files in Azure Blob Storage.
- Added GuidValidator for validating GUIDs based on game type.
- Updated project files and configurations for .NET 9 and Azure Functions v4.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
       "type": "process",
       "problemMatcher": "$msCompile",
       "options": {
-        "cwd": "${workspaceFolder}/src/sync-func"
+        "cwd": "${workspaceFolder}/src/XtremeIdiots.Portal.Sync.App"
       }
     },
     {
@@ -31,7 +31,7 @@
       },
       "problemMatcher": "$msCompile",
       "options": {
-        "cwd": "${workspaceFolder}/src/sync-func"
+        "cwd": "${workspaceFolder}/src/XtremeIdiots.Portal.Sync.App"
       }
     },
     {
@@ -65,7 +65,7 @@
       "type": "process",
       "problemMatcher": "$msCompile",
       "options": {
-        "cwd": "${workspaceFolder}/src/sync-func"
+        "cwd": "${workspaceFolder}/src/XtremeIdiots.Portal.Sync.App"
       }
     },
     {
@@ -82,14 +82,14 @@
       "dependsOn": "clean release (functions)",
       "problemMatcher": "$msCompile",
       "options": {
-        "cwd": "${workspaceFolder}/src/sync-func"
+        "cwd": "${workspaceFolder}/src/XtremeIdiots.Portal.Sync.App"
       }
     },
     {
       "type": "func",
       "dependsOn": "build (functions)",
       "options": {
-        "cwd": "${workspaceFolder}/src/sync-func/bin/Debug/net9.0"
+        "cwd": "${workspaceFolder}/src/XtremeIdiots.Portal.Sync.App/bin/Debug/net9.0"
       },
       "command": "host start",
       "isBackground": true,
