--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -42,7 +42,7 @@ jobs:
         
     - uses: frasermolyneux/actions/dotnet-func-ci@main
       with:
-        dotnet-project: "sync-func"
+        dotnet-project: "XtremeIdiots.Portal.Sync.App"
         dotnet-version: 9.0.x
         src-folder: "src"
 
