--- a/.github/workflows/feature-development.yml
+++ b/.github/workflows/feature-development.yml
@@ -19,7 +19,7 @@ jobs:
 
     - uses: frasermolyneux/actions/dotnet-func-ci@main
       with:
-        dotnet-project: "sync-func"
+        dotnet-project: "XtremeIdiots.Portal.Sync.App"
         dotnet-version: 9.0.x
         src-folder: "src"
 
@@ -70,7 +70,7 @@ jobs:
 
     - uses: frasermolyneux/actions/deploy-function-app@main
       with:
-        function-app-artifact-name: "sync-func"
+        function-app-artifact-name: "XtremeIdiots.Portal.Sync.App"
         function-app-name: ${{ needs.terraform-plan-and-apply-dev.outputs.function_app_name }}
         AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
