--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-    "azureFunctions.deploySubpath": "src/sync-func/bin/Release/net9.0/publish",
+    "azureFunctions.deploySubpath": "src/XtremeIdiots.Portal.Sync.App/bin/Release/net9.0/publish",
     "azureFunctions.projectLanguage": "C#",
     "azureFunctions.projectRuntime": "~4",
     "debug.internalConsoleOptions": "neverOpen",
-    "azureFunctions.projectSubpath": "src/sync-func",
+    "azureFunctions.projectSubpath": "src/XtremeIdiots.Portal.Sync.App",
     "azureFunctions.preDeployTask": "publish (functions)"
 }
