--- a/src/XtremeIdiots.Portal.Sync.App/XtremeIdiots.Portal.Sync.App.csproj
+++ b/src/XtremeIdiots.Portal.Sync.App/XtremeIdiots.Portal.Sync.App.csproj
@@ -23,8 +23,8 @@
 	  <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.6" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.6" />
 	  <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="9.0.6" />
-	  <PackageReference Include="XtremeIdiots.Portal.RepositoryApiClient" Version="1.1.408.1" />
-    <PackageReference Include="XtremeIdiots.Portal.ServersApiClient" Version="1.1.286.1" />
+	  <PackageReference Include="XtremeIdiots.Portal.Repository.Api.Client.V1" Version="1.1.412.1" />
+    <PackageReference Include="XtremeIdiots.Portal.ServersApiClient" Version="1.1.287.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XtremeIdiots.Portal.Forums.Integration\XtremeIdiots.Portal.Forums.Integration.csproj" />
