--- a/.github/workflows/pull-request-validation.yml
+++ b/.github/workflows/pull-request-validation.yml
@@ -57,6 +57,7 @@ jobs:
       run: |
         cd terraform
         echo "function_app_name=$(terraform output -raw function_app_name)" >> $GITHUB_OUTPUT
+        echo "resource_group_name=$(terraform output -raw resource_group_name)" >> $GITHUB_OUTPUT
       env:
         ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
@@ -66,6 +67,7 @@ jobs:
 
     outputs:
       function_app_name: ${{ steps.terraform-output.outputs.function_app_name }}
+      resource_group_name: ${{ steps.terraform-output.outputs.resource_group_name }}
 
   function-app-deploy-dev:
     environment: Development
@@ -82,6 +84,7 @@ jobs:
       with:
         function-app-artifact-name: "XtremeIdiots.Portal.Sync.App"
         function-app-name: ${{ needs.terraform-plan-and-apply-dev.outputs.function_app_name }}
+        function-app-resource-group: ${{ needs.terraform-plan-and-apply-dev.outputs.resource_group_name }}
         AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
