--- a/.github/workflows/release-to-production.yml
+++ b/.github/workflows/release-to-production.yml
@@ -52,6 +52,7 @@ jobs:
       run: |
         cd terraform
         echo "function_app_name=$(terraform output -raw function_app_name)" >> $GITHUB_OUTPUT
+        echo "resource_group_name=$(terraform output -raw resource_group_name)" >> $GITHUB_OUTPUT
       env:
         ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
@@ -61,6 +62,7 @@ jobs:
 
     outputs:
       function_app_name: ${{ steps.terraform-output.outputs.function_app_name }}
+      resource_group_name: ${{ steps.terraform-output.outputs.resource_group_name }}
 
   function-app-deploy-dev:
     environment: Development
@@ -77,6 +79,7 @@ jobs:
       with:
         function-app-artifact-name: "XtremeIdiots.Portal.Sync.App"
         function-app-name: ${{ needs.terraform-plan-and-apply-dev.outputs.function_app_name }}
+        function-app-resource-group: ${{ needs.terraform-plan-and-apply-dev.outputs.resource_group_name }}
         AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
@@ -106,6 +109,7 @@ jobs:
       run: |
         cd terraform
         echo "function_app_name=$(terraform output -raw function_app_name)" >> $GITHUB_OUTPUT
+        echo "resource_group_name=$(terraform output -raw resource_group_name)" >> $GITHUB_OUTPUT
       env:
         ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
@@ -115,6 +119,7 @@ jobs:
 
     outputs:
       function_app_name: ${{ steps.terraform-output.outputs.function_app_name }}
+      resource_group_name: ${{ steps.terraform-output.outputs.resource_group_name }}
 
   function-app-deploy-prd:
     environment: Production
@@ -131,6 +136,7 @@ jobs:
       with:
         function-app-artifact-name: "XtremeIdiots.Portal.Sync.App"
         function-app-name: ${{ needs.terraform-plan-and-apply-prd.outputs.function_app_name }}
+        function-app-resource-group: ${{ needs.terraform-plan-and-apply-prd.outputs.resource_group_name }}
         AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
