--- a/.github/workflows/destroy-development.yml
+++ b/.github/workflows/destroy-development.yml
@@ -2,8 +2,8 @@ name: Destroy Development
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "30 0 * * *"
+  #schedule:
+  #  - cron: "30 0 * * *"
 
 permissions:
   id-token: write # This is required for Az CLI Login
