--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -8,15 +8,17 @@ on:
   schedule:
     - cron: "0 3 * * 4" # Thursday 3am UTC
 
-permissions:
-  contents: read
-  id-token: write
+
+permissions: read-all
 
 concurrency:
   group: ${{ github.workflow }}
 
 jobs:
   build-and-test:
+    permissions:
+      contents: read
+      id-token: write
     runs-on: ubuntu-latest
     steps:
       - uses: frasermolyneux/actions/dotnet-func-ci@main
@@ -26,6 +28,9 @@ jobs:
           src-folder: "src"
 
   terraform-plan-and-apply-dev:
+    permissions:
+      contents: read
+      id-token: write
     environment: Development
     needs: build-and-test
     runs-on: ubuntu-latest
@@ -59,6 +64,9 @@ jobs:
       resource_group_name: ${{ steps.terraform-output-dev.outputs.resource_group_name }}
 
   function-app-deploy-dev:
+    permissions:
+      contents: read
+      id-token: write
     environment: Development
     needs: [build-and-test, terraform-plan-and-apply-dev]
     runs-on: ubuntu-latest
@@ -75,6 +83,9 @@ jobs:
           AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
   terraform-plan-and-apply-prd:
+    permissions:
+      contents: read
+      id-token: write
     environment: Production
     needs: function-app-deploy-dev
     runs-on: ubuntu-latest
@@ -108,6 +119,9 @@ jobs:
       resource_group_name: ${{ steps.terraform-output-prd.outputs.resource_group_name }}
 
   function-app-deploy-prd:
+    permissions:
+      contents: read
+      id-token: write
     environment: Production
     needs: [build-and-test, terraform-plan-and-apply-prd]
     runs-on: ubuntu-latest
