--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
+      - name: Checkout additional repo
+        uses: actions/checkout@v6
+        with:
+          repository: frasermolyneux/.github-copilot
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v5
         with:
