--- a/.github/workflows/destroy-environment.yml
+++ b/.github/workflows/destroy-environment.yml
@@ -18,15 +18,14 @@ jobs:
   terraform-destroy:
     permissions:
       contents: read
-      id-token: write # This is required for Az CLI Login
+      id-token: write
     environment: ${{ inputs.environment == 'prd' && 'Production' || 'Development' }}
     runs-on: ubuntu-latest
-
-    concurrency: # Prevent multiple GitHub Actions invocations against stateful resources. e.g. Terraform state file / Database / Deployed Apps
+    concurrency:
       group: ${{ github.repository }}-${{ inputs.environment }}
 
     steps:
-    - uses: frasermolyneux/actions/terraform-destroy@main
+      - uses: frasermolyneux/actions/terraform-destroy@main
       with:
         terraform-folder: "terraform"
         terraform-var-file: ${{ inputs.environment == 'prd' && 'tfvars/prd.tfvars' || 'tfvars/dev.tfvars' }}
