--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -1,12 +1,12 @@
 name: Deploy Prd
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
+  workflow_dispatch:
   schedule:
-    - cron: "0 3 * * 4" # Thursday 3am UTC
+    - cron: "0 3 * * 4"
 
 permissions: {}
 
@@ -119,8 +119,8 @@ jobs:
           ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
           ARM_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
           ARM_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
-          ARM_USE_OIDC: true
           ARM_USE_AZUREAD: true
+          ARM_USE_OIDC: true
 
     outputs:
       function_app_name: ${{ steps.terraform-output-prd.outputs.function_app_name }}
