fix: checkout shared copilot config to subdirectory and gitignore it

--- a/.gitignore
+++ b/.gitignore
@@ -357,3 +357,6 @@ __tablestorage__/
 
 terraform/.terraform.lock.hcl
 terraform/.terraform/*
+
+# Shared Copilot configuration checked out during copilot-setup-steps
+.github-copilot/
