--- a/src/XtremeIdiots.Portal.Sync.App/XtremeIdiots.Portal.Sync.App.csproj
+++ b/src/XtremeIdiots.Portal.Sync.App/XtremeIdiots.Portal.Sync.App.csproj
@@ -24,6 +24,8 @@
 	  <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.3" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.3" />
 	  <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="10.0.3" />
+	  <PackageReference Include="MX.Api.Abstractions" Version="2.2.40" />
+	  <PackageReference Include="MX.Api.Client" Version="2.2.40" />
 	  <PackageReference Include="XtremeIdiots.Portal.Repository.Api.Client.V1" Version="2.1.113" />
     <PackageReference Include="XtremeIdiots.Portal.Integrations.Servers.Api.Client.V1" Version="2.1.85" />
   </ItemGroup>
