--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -21,7 +21,7 @@ jobs:
     if: github.event_name != 'push' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - uses: frasermolyneux/actions/dotnet-func-ci@main
+      - uses: frasermolyneux/actions/dotnet-func-ci@dotnet-func-ci/v1.4
         with:
           dotnet-project: "XtremeIdiots.Portal.Sync.App"
           dotnet-version: 9.0.x
@@ -37,7 +37,7 @@ jobs:
     concurrency:
       group: ${{ github.repository }}-dev
     steps:
-      - uses: frasermolyneux/actions/terraform-plan-and-apply@main
+      - uses: frasermolyneux/actions/terraform-plan-and-apply@terraform-plan-and-apply/v1.4
         with:
           terraform-folder: "terraform"
           terraform-var-file: "tfvars/dev.tfvars"
@@ -73,7 +73,7 @@ jobs:
     concurrency:
       group: ${{ github.repository }}-dev
     steps:
-      - uses: frasermolyneux/actions/deploy-function-app@main
+      - uses: frasermolyneux/actions/deploy-function-app@deploy-function-app/v1.2
         with:
           function-app-artifact-name: "XtremeIdiots.Portal.Sync.App"
           function-app-name: ${{ needs.terraform-plan-and-apply-dev.outputs.function_app_name }}
@@ -98,7 +98,7 @@ jobs:
       needs.build-and-test.result == 'success' &&
       needs.terraform-plan-and-apply-dev.result == 'success'
     steps:
-      - uses: frasermolyneux/actions/terraform-plan-and-apply@main
+      - uses: frasermolyneux/actions/terraform-plan-and-apply@terraform-plan-and-apply/v1.4
         with:
           terraform-folder: "terraform"
           terraform-var-file: "tfvars/prd.tfvars"
@@ -141,7 +141,7 @@ jobs:
       needs.terraform-plan-and-apply-prd.result == 'success' &&
       needs.function-app-deploy-dev.result == 'success'
     steps:
-      - uses: frasermolyneux/actions/deploy-function-app@main
+      - uses: frasermolyneux/actions/deploy-function-app@deploy-function-app/v1.2
         with:
           function-app-artifact-name: "XtremeIdiots.Portal.Sync.App"
           function-app-name: ${{ needs.terraform-plan-and-apply-prd.outputs.function_app_name }}
