--- a/src/XtremeIdiots.Portal.Forums.Integration/XtremeIdiots.Portal.Forums.Integration.csproj
+++ b/src/XtremeIdiots.Portal.Forums.Integration/XtremeIdiots.Portal.Forums.Integration.csproj
@@ -9,8 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="XtremeIdiots.InvisionCommunity" Version="1.1.132.1" />
-    <PackageReference Include="XtremeIdiots.Portal.Repository.Abstractions.V1" Version="2.1.130" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.3" />
+    <PackageReference Include="MX.InvisionCommunity.Api.Abstractions" Version="1.0.18" />
+    <PackageReference Include="XtremeIdiots.Portal.Repository.Abstractions.V1" Version="2.1.135" />
   </ItemGroup>
 
 </Project>
