--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -14,11 +14,28 @@ concurrency:
   group: ${{ github.workflow }}
 
 jobs:
+  detect-changes:
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    outputs:
+      src: ${{ steps.changes.outputs.src }}
+      terraform: ${{ steps.changes.outputs.terraform }}
+    steps:
+      - id: changes
+        uses: frasermolyneux/actions/detect-changes@main
+        with:
+          filters: |
+            src:src/**
+            terraform:terraform/**
+
   build-and-test:
     permissions:
       contents: read
       id-token: write
-    if: github.event_name != 'push' || github.ref == 'refs/heads/main'
+    needs:
+      - detect-changes
+    if: needs.detect-changes.outputs.src == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: frasermolyneux/actions/dotnet-func-ci@dotnet-func-ci/v1.4
@@ -32,12 +49,24 @@ jobs:
       contents: read
       id-token: write
     environment: Development
-    needs: build-and-test
+    needs:
+      - detect-changes
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.repository }}-dev
     steps:
-      - uses: frasermolyneux/actions/terraform-plan-and-apply@terraform-plan-and-apply/v1.4
+      - if: needs.detect-changes.outputs.terraform == 'true'
+        uses: frasermolyneux/actions/terraform-plan-and-apply@terraform-plan-and-apply/v1.4
+        with:
+          terraform-folder: "terraform"
+          terraform-var-file: "tfvars/dev.tfvars"
+          terraform-backend-file: "backends/dev.backend.hcl"
+          AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
+          AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+
+      - if: needs.detect-changes.outputs.terraform != 'true'
+        uses: frasermolyneux/actions/terraform-output@terraform-output/v1.0
         with:
           terraform-folder: "terraform"
           terraform-var-file: "tfvars/dev.tfvars"
@@ -68,10 +97,14 @@ jobs:
       contents: read
       id-token: write
     environment: Development
-    needs: [build-and-test, terraform-plan-and-apply-dev]
+    needs:
+      - detect-changes
+      - build-and-test
+      - terraform-plan-and-apply-dev
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.repository }}-dev
+    if: "!failure() && !cancelled() && needs.detect-changes.outputs.src == 'true'"
     steps:
       - uses: frasermolyneux/actions/deploy-function-app@deploy-function-app/v1.2
         with:
@@ -88,17 +121,26 @@ jobs:
       id-token: write
     environment: Production
     needs:
-      - build-and-test
+      - detect-changes
       - terraform-plan-and-apply-dev
+      - function-app-deploy-dev
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.repository }}-prd
-    if: |
-      always() &&
-      needs.build-and-test.result == 'success' &&
-      needs.terraform-plan-and-apply-dev.result == 'success'
+    if: "!failure() && !cancelled() && needs.terraform-plan-and-apply-dev.result == 'success'"
     steps:
-      - uses: frasermolyneux/actions/terraform-plan-and-apply@terraform-plan-and-apply/v1.4
+      - if: needs.detect-changes.outputs.terraform == 'true'
+        uses: frasermolyneux/actions/terraform-plan-and-apply@terraform-plan-and-apply/v1.4
+        with:
+          terraform-folder: "terraform"
+          terraform-var-file: "tfvars/prd.tfvars"
+          terraform-backend-file: "backends/prd.backend.hcl"
+          AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
+          AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+
+      - if: needs.detect-changes.outputs.terraform != 'true'
+        uses: frasermolyneux/actions/terraform-output@terraform-output/v1.0
         with:
           terraform-folder: "terraform"
           terraform-var-file: "tfvars/prd.tfvars"
@@ -130,16 +172,13 @@ jobs:
       id-token: write
     environment: Production
     needs:
-      - build-and-test
+      - detect-changes
       - terraform-plan-and-apply-prd
       - function-app-deploy-dev
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.repository }}-prd
-    if: |
-      always() &&
-      needs.terraform-plan-and-apply-prd.result == 'success' &&
-      needs.function-app-deploy-dev.result == 'success'
+    if: "!failure() && !cancelled() && needs.terraform-plan-and-apply-prd.result == 'success' && needs.detect-changes.outputs.src == 'true'"
     steps:
       - uses: frasermolyneux/actions/deploy-function-app@deploy-function-app/v1.2
         with:
